scss/blog/_posts.scss
.posts {
    // overflow-y: auto;
    // .menu-bar {
    //     position: fixed;
    //     z-index: 997;
    // }
    .menu-bar.right a:hover, .menu-bar.right a:active, footer a:hover, footer.flex-line a.active {
        font-weight: bold ;
    }
    .menu-bar nav a:not(.selected):hover, .menu-bar nav a:not(.selected):active {
        font-weight: normal;
    }
    header, footer {
        right: 20px;
        width: 100%;
        padding-left: 70px;
    }
    footer.flex-line {
        a {
            text-transform: none;
        }
    }
    @media (max-width: 767px) {
        .menu-bar, .menu-bar a, .menu-bar p {
            font-size: 0.75rem !important;
        }
        nav > ul > li > a::before {
            font-size: 0.9rem !important;
            margin-right: 5px;
        }
        nav > ul > li > a.selected::before {
            font-size: 0.9rem !important;
            margin-right: 5px;
        }
        header {
            padding-left: 50px;
        }
        aside.left > ul {
            margin: 0 !important;
            width: 100%;
        }
    }
    // footer {
    //     bottom: 0;
    // }
    // #main-container aside.right {
    //     right: 20px;
    // }
    // @supports (-webkit-appearance:none) {
    //     header, footer, #main-container aside.right {
    //         right: 15px;
    //     }
    // }
    // @media (max-width: 1024px) {
    //     header, footer, #main-container aside.right {
    //         right: 0;
    //     }
    // }
    main {
        // @media (min-width: 280px) {
        //     margin: 25px;
        //     width: 100%;
        // }
        // @media (min-width: 767px) and (orientation: portrait) {
        //     margin: 50px 25px;
        // }
        // @media (min-width: 1023px) {
        //     margin: 25px 50px;
        //     width: calc(100% - 100px);
        // }

        @media (min-width: 280px) {
            #list {
                padding: 0;
                height: auto;
                ul {
                    li {
                        width: 100%;
                        &:not(:first-of-type) {
                            padding-top: 5.5vh;
                        }
                        a {
                            color: black;
                            text-decoration: none;
                            font-size: 1rem;
                            line-height: 1.25;
                            &::before {
                                content: "●";
                                margin-left: 7vw;
                                margin-right: 2%;
                                font-family: Verdana, "Liberation Sans", "DejaVu Sans";
                                font-size: 1rem;
                                position: relative;
                            }
                        }
                        time {
                            display: block;
                            padding: 1rem 0 0 0;
                            margin: 0 0 0 7vw;
                        }
                        .content {
                            margin: 0 15vw;
                            img, video {
                                width: 100%;
                                padding: 2rem 0 1rem 0;
                            }
                            figcaption {
                                font-family: "Vollkorn";
                                text-align: center;
                                line-height: 1.3;
                                margin: 0;
                                padding: 0;
                            }
                            p {
                                font-family: "Vollkorn";
                                margin: 0;
                                padding: 1rem 0 0 0;
                                line-height: 1.3;
                                width: 55%;
                                &::before {
                                    content: "";
                                    margin-left: 3vw;
                                }
                                &:first-of-type {
                                    padding-top: 2rem;
                                }
                            }
                            .content-link {
                                font-family: "Vollkorn";
                                font-size: 1rem;
                                margin: 0;
                                padding: 0;
                                line-height: 1.3;
                                color: blue;
                                pointer-events: auto;
                                word-wrap: break-word;
                                &::before {
                                    content: "";
                                    margin: 0;
                                    bottom: 0 !important;
                                }
                            }
                        }
                        @supports (-webkit-appearance:none) {
                            a::before {
                                font-size: 1.75rem;
                            }
                        }
                        &::before {
                            bottom: 2px;
                        }
                        &:last-of-type {
                            margin-bottom: 15vh;
                        }
                        .match a {
                            color: $magenta;
                        }
                    }
                }
            }
        }
        @media (max-width: 767px) {
            padding: 20px;
            #list {
                a:before, time, figcaption, figcaption a.content-link {
                    font-size: 0.75rem !important;
                }

                time {
                    padding-top: 0.5rem !important;
                }
                p {
                    padding-bottom: 0.5rem !important;
                    &.text-space {
                        padding-bottom: 2rem !important;
                    }
                }
            }
        }
        @media (max-width: 767px) and (orientation: portrait) {
            .content {
                margin: 0 !important;
            }
        }
        @media (min-width: 767px) {
            #list {
                ul li a {
                    font-size: 1.5rem;
                    &::before {
                        bottom: 5px;
                    }
                }
            }
        }
        @media (max-width: 1024px) {
            .content p {
                width: 100% !important;
            }
        }
        @media (min-width: 1023px) {
            #list {
                width: 100%;
                padding: 5%;
                ul {
                    li {
                        a {
                            font-size: 2.25rem;
                        }
                        &::before {
                            bottom: 5px;
                        }
                        &:last-of-type {
                            margin-bottom: 5.5vh;
                        }
                    }
                }
                .content p.text-content {
                    width: 55%;
                }
            }
        }
        @media (max-width: 1024px) {
            .content {
                p.text-content {
                    width: 100% !important;
                }
            }
        }
    }
}
footer {
    ul {
        width: 100%;
        display: flex;
        justify-content: space-between;
        align-items: center;
        li {
            span {
                text-transform: none;
            }
        }
    }
    .title {
        position: absolute;
        text-align: center;
        width: 100%;
        bottom: 0;
        left: 0;
        margin: 0;
        padding: 0;
        line-height: 50px;
        pointer-events: none;
    }
}

